--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -22,5 +22,8 @@
 	            </tr>
 	        </tbody>
 	    </table>
+
+		<a href="/dashbord"><button type="button">戻る</button></a>
+
 </body>
 </html>
