--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,8 +19,9 @@
 		<p th:text="${message}"></p>
 		パスワード:
 		<input type="password" name="password"><br>
-		<button type="submit" name="action" value="register0">新規登録</button><br>
-		<button type="submit" name="action" value="login">ログイン</button>
+
+		<button type="submit" name="action" value="registerbtn">新規登録</button><br>
+		<button type="submit" name="action" value="loginbtn">ログイン</button>
 	</form>
 </body>
 
