--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -24,6 +24,8 @@
 			</tr>
 		</tbody>
 	</table>
-	<a href="/"><button type="button">戻る</button></a>
+
+	<a href="/dashbord"><button type="button">戻る</button></a>
+
 </body>
 </html>
